# agentic-skills-runner

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  SKILLS_GUIDE.md  pyproject.toml  requirements-dev.txt  requirements.txt  soul.md
.github/agents/: copilot-instructions.md
.specify/memory/: constitution.md
.walkthrough/: llm-skills-runner-code-walkthrough.json
example_skills/calculator/: SKILL.md
example_skills/web_browser/: SKILL.md
example_skills/web_browser/examples/: extract_elements.py  find_links.py  get_page_info.py  search_content.py
examples/calculator/: SKILL.MD
examples/calculator/examples/: basic.py
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
specs/001-llm-skills-runner/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-llm-skills-runner/checklists/: requirements.md
specs/001-llm-skills-runner/contracts/: conversation_flow.md  get_skill.md  list_skills.md  (+3 more)
src/skills_runner/: __init__.py  api.py  cli.py  config.py  conversation.py  exceptions.py  executor.py  llm_client.py  models.py  skills_tool.py  tools.py
tests/contract/: test_get_skill.py  test_list_skills.py  test_llm_client.py  test_read_file_in_skill.py  test_read_files_in_skill.py  test_run_python_script.py
tests/integration/: test_conversation.py  test_script_execution.py  test_skills_discovery.py
tests/unit/: test_config.py  test_conversation_unit.py  test_executor.py  test_llm_client_unit.py  test_models.py  test_skills_tool.py
